cluster/infrastructure/gateway-api/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: homelab-proxy-config
      namespace: gateway
  addresses:
    - type: IPAddress
      value: 172.26.20.34
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "grafana.martinez-saweczko.es"
      allowedRoutes:
        namespaces:
          from: All
